Just run tests parallelly